Contract Tests working   create user   Call to test class Helper   DoValidate Build Docker image using Dockerfile maven plugin Use asymetric encryption key.
