# digital-login/digital-login-ms/digital-login-application/src/main/java/org/awesley/digital/login/application/security/controller/AuthenticationRestController.java
@@ -1,41 +1,0 @@
-package org.awesley.digital.login.application.security.controller;
-
-import javax.servlet.http.HttpServletRequest;
-
-import org.awesley.digital.login.application.security.service.JwtAuthenticationResponse;
-import org.awesley.digital.login.service.implementation.JwtTokenUtil;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RestController;
-
-@RestController
-public class AuthenticationRestController {
-
-    @Value("${jwt.header}")
-    private String tokenHeader;
-
-    @Autowired
-    private JwtTokenUtil jwtTokenUtil;
-
-//    @Autowired
-//    private UserDetailsService userDetailsService;
-
-    @RequestMapping(value = "${jwt.route.authentication.refresh}", method = RequestMethod.GET)
-    public ResponseEntity<?> refreshAndGetAuthenticationToken(HttpServletRequest request) {
-        String authToken = request.getHeader(tokenHeader);
-        final String token = authToken.substring(7);
-        //String username = jwtTokenUtil.getUsernameFromToken(token);
-        //JwtUser user = (JwtUser) userDetailsService.loadUserByUsername(username);
-
-        //if (jwtTokenUtil.canTokenBeRefreshed(token, user.getLastPasswordResetDate())) {
-            String refreshedToken = jwtTokenUtil.refreshToken(token);
-            return ResponseEntity.ok(new JwtAuthenticationResponse(refreshedToken));
-        //} else {
-        //    return ResponseEntity.badRequest().body(null);
-        //}
-    }
-
-}
